Add GUI basic elements (window, layout, colors)